<resources>
    <string name="app_name">IAMORGANISER</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="lorem_ipsum_dolor_sit">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="email">Email</string>
    <string name="brandonelouis_gmail_com">Brandonelouis@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password1">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="by_tapping_log_in_or_continue"><![CDATA[By tapping Log IN or Continue with Google, Facebook, or Apple, you agree to I’M\'s Terms & Conditions and Privacy Policy]]></string>
    <string name="you_don_t_have_an_account_yet_sign_up">You don\'t have an account yet? Sign up</string>
    <string name="next">Next</string>
    <string name="wallets">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_labo_read_more">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labo... <font color="#F9353E">Read more</font></string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>

</resources>