<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    android:scrollbars="none"
    tools:context=".activity.auth.SignUPActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen20"
        android:paddingHorizontal="@dimen/dimen20">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:contentDescription="Logo"
            android:src="@drawable/ic_signup_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCreateAccount"
            style="@style/_regular_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Create an Account"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen6"
            android:text="@string/lorem_ipsum_dolor_sit"
            android:fontFamily="@font/satoshi_regular"
            android:textSize="15sp"
            android:textColor="@color/secondary"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

        <ImageView
            android:id="@+id/ivSubLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:contentDescription="Logo"
            android:src="@drawable/ic_create_account_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:fontFamily="@font/satoshi_regular"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="First Name"
            app:layout_constraintTop_toBottomOf="@+id/ivSubLogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen50"
            android:layout_marginTop="@dimen/dimen10"
            android:elevation="7dp"
            android:background="@null"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_10"
                android:gravity="center_vertical"
                android:hint="@string/brandonelouis_gmail_com"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/dimen24"
                android:textColorHint="@color/hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:fontFamily="@font/satoshi_regular"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Last Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen50"
            android:layout_marginTop="@dimen/dimen10"
            android:background="@null"
            android:elevation="7dp"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_10"
                android:gravity="center_vertical"
                android:hint="@string/brandonelouis_gmail_com"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/dimen24"
                android:textColorHint="@color/hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvProfessional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16"
            android:fontFamily="@font/satoshi_regular"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Enter professional name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilLastName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProfessional"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen50"
            android:layout_marginTop="@dimen/dimen10"
            android:elevation="7dp"
            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProfessional">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_10"
                android:gravity="center_vertical"
                android:hint="Enter here"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/dimen24"
                android:textColorHint="@color/hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24"
            android:background="@drawable/blue_gradient_15"
            android:text="@string/next"
            android:fontFamily="@font/satoshi_regular"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilProfessional" />

        <TextView
            android:id="@+id/tvByTapping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen40"
            android:text="@string/by_tapping_log_in_or_continue"
            android:textAlignment="center"
            android:fontFamily="@font/satoshi_regular"
            android:textSize="15sp"
            android:textColor="@color/secondary"
            app:layout_constraintTop_toBottomOf="@+id/btnNext" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:text="Already have an account? Log in"
            android:textAlignment="center"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvByTapping" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>